# DuNaiBot

./: README.md  pyproject.toml
data/manager/: plugin_list.yml
src/plugins/dunai_check_weather/: __init__.py
src/plugins/dunai_daily_sign/: __init__.py  data_pojo.py  data_source.py  models.py
src/plugins/dunai_get_award/: __init__.py  data_pojo.py  data_source.py  models.py
src/plugins/dunai_help/: __init__.py
src/plugins/dunai_maimai_line_up/: __init__.py  data_pojo.py  data_source.py  models.py
src/plugins/dunai_randomlogi/: __init__.py
src/plugins/test/: test.py
src/util/: image.py
